--- a/about.html
+++ b/about.html
@@ -1,18 +1,19 @@
 ---
 layout: default
-title: "The high quality, completely customizable and 100% free blog template for Jekyll"
+title: "About me"
 description: ""
 ---
 
 <div class="about {% if site.scrollappear_enabled %}scrollappear{% endif %}">
-  <img src="{% asset 'about.jpg' @path %}" alt="About Nielsen Ramon header image" />
+  <img src="{% asset 'about.jfif' @path %}" alt="About me header image" />
   <h1>About me</h1>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Hello and welcome to my blog series. I usually code in C, C++ and C#. In my free time I work on open source projects,
+    help others on dev forums and blog.
+ </p>
+  <br>
+</p>
+  P.S what I write is distributed under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>. You are free to share, adapt the material but please be kind to give an appropriate credit.
+  Do not hesitate to contact me if you would like to discuss licensing further.  
   </p>
 </div>
