Fixed minor about page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ description: ""
   <h1>About me</h1>
   <p>
     Hello and welcome to my blog series. I usually code in C, C++ and C#. In my free time I work on open source projects,
-    help others on dev forums and blog.
+    help others on dev forums and blog about my progress.
  </p>
   <br>
 </p>
